syntax = "proto3";

package com.taigezhang.grpc_protobuf.protobuf.hello_service;

// option to produce separate java files of messages
option java_multiple_files = true;

service HelloService {
  rpc sayHello(SayHelloRequest) returns (SayHelloResponse);
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}